--- a/challenge.html
+++ b/challenge.html
@@ -4,13 +4,14 @@
 	<title>challenge page</title>
 
 
-<link rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-<style>
-</style>
+<!-- To ensure proper rendering and touch zooming -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 
 </head>
@@ -33,13 +34,12 @@
 <button id="mainPage">back</button>
 
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+<script type="text/javascript" src="assets/javascript/game.js"></script>
 
+<!-- add javascript to individual page -->
 <script type="text/javascript">
-
-
-
-
 
 
 </script>
