--- a/favorite.html
+++ b/favorite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>favorite page</title>
+	<title>Favorite Page</title>
 
 
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
