--- a/logIn.html
+++ b/logIn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>log in</title>
+	<title>Log In</title>
 
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
