--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>main page</title>
+	<title>Main Page</title>
 
 
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
