--- a/challenge.html
+++ b/challenge.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>challenge page</title>
+	<title>Challenge Page</title>
 
 
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
