commiting local changes

--- a/prototype.html
+++ b/prototype.html
@@ -95,6 +95,11 @@
 
 	<script type="text/javascript">
 
+		//these are the words for the daily challenge.
+		var wordsList = [
+			""
+		];
+
 		
 
 		$('#search').on("click", function(){
@@ -102,11 +107,11 @@
 			//Prevents button from submitting form
 			event.preventDefault();
 
-			//declares an empty variable to hold user input
-			var word = "";
+			// //declares an empty variable to hold user input
+			// var word = "";
 
 			//catches user input, trims white space on ends, and makes it all lower case
-			word = ($('#input').val().trim()).toLowerCase();
+			var word = ($('#input').val().trim()).toLowerCase();
 
 			//all this does is clear the text form after the search button is activated.
 			//it sets the value of the html element with id #input to an empty string
@@ -207,7 +212,12 @@
 
 					var wordType = (response.results[0].lexicalEntries[0].lexicalCategory).toLowerCase();
 
-					var exampleSentence = response.results[0].lexicalEntries[0].entries[0].senses[0].examples[0].text;
+                    var examples = response.results[0].lexicalEntries[0].entries[0].senses[0].examples;
+
+					var exampleSentence = '';
+					if ( examples ) {
+ 					  exampleSentence = ": " + "<i>"+ examples[0].text + "</i>" + ".";
+					}
 
 					//this looks horrible to the eye.
 					var $wordInfo = '<h2>' + word + ' ' + '<span class="glyphicon glyphicon-volume-up glyphstyle" aria-hidden="true" id="speak"></span>' + "</h2>" +
@@ -220,7 +230,7 @@
 					$('#word-info').empty();
 					$('#word-info').html($wordInfo);
 					$('#word-definition').html(definition);
-					$('#word-definition').append(": " + "<i>"+ exampleSentence + "</i>" + ".");
+					$('#word-definition').append(exampleSentence);
 
 					$('#speak').on("click", function(){
 
