--- a/challenge.html
+++ b/challenge.html
@@ -8,30 +8,77 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<link rel="stylesheet" href="assets/css/font-awesome.css">
+
+
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 <!-- To ensure proper rendering and touch zooming -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+
+
+
+
 </head>
 
 <body>
 
-<h1> word challenge</h1>
-<h5>try to use this word at least once today</h5>
+	<nav class="navbar navbar-inverse nav-style navbar-fixed-top">
 
-<!-- random word will be taken from the api and displayed here -->
-<div id="challengeWord"></div>
+	 	<div class="container-fluid">
+	   		<div class="navbar-header">
+	     		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+		       		<span class="icon-bar"></span>
+		       		<span class="icon-bar"></span>
+		       		<span class="icon-bar"></span>                        
+	      		</button>
+	      		<a class="navbar-brand" href="main_2.html">Word Up</a>
+	    	</div>
+
+	    	<div class="collapse navbar-collapse navbar-right" id="myNavbar">
+	      		<ul class="nav navbar-nav">
+	       			<li><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;Search</a></li>
+	        		<li><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp;  Favorites</a></li>
+	        		<li class="active"><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a>		</li>
+	      		</ul>
+	   		 </div>
+
+	  	</div>
+	  	
+	</nav>
+
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3"></div>
+				<div class="col-md-6">
+					<h1><i class="fa fa-trophy .glyphstyle2" aria-hidden="true"></i>&nbsp; Word Challenge</h1>
+					<h5>try to use this word at least once today</h5>
+
+					<!-- random word will be taken from the api and displayed here -->
+					<div id="challengeWord"></div>
 
 
 
 
-<!-- when this button is selected it will post to social media that they were able to successfully use the challenge word today . will need to look into using log in with slack to make it easier for user to post-->
-<button id="postToSocialMedia">post</button>
+					<!-- when this button is selected it will post to social media that they were able to successfully use the challenge word today . will need to look into using log in with slack to make it easier for user to post-->
+					<button class="button-style-2" id="postToSocialMedia">post</button>
 
-<!-- this button will take you back to the main page -->
-<button id="mainPage">back</button>
+				<div class="col-md-3"></div>
+				
+		</div>
+	</div>
 
 
 <script src="https://code.jquery.com/jquery.js"></script>
