--- a/favorite.html
+++ b/favorite.html
@@ -8,23 +8,60 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+<link rel="stylesheet" href="assets/css/font-awesome.css">
+
+
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 <!-- To ensure proper rendering and touch zooming -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+
+
 
 
 </head>
 
 <body>
-<h1>favorite words</h1>
 
 
-<!-- //button id would be a div that we would reference in javascript and each time a favorite word is created, it would create a button-->
-<button id="word">word</button>
+	<nav class="navbar navbar-inverse nav-style navbar-fixed-top">
+	 	<div class="container-fluid">
+	   		<div class="navbar-header">
+	     		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+	       		<span class="icon-bar"></span>
+	       		<span class="icon-bar"></span>
+	       		<span class="icon-bar"></span>                        
+	      		</button>
+	      		<a class="navbar-brand" href="main_2.html">Word Up</a>
+	    	</div>
+	    	<div class="collapse navbar-collapse navbar-right" id="myNavbar">
+	      		<ul class="nav navbar-nav">
+	       			<li><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;Search</a></li>
+	        		<li class="active"><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp;  Favorites</a></li>
+	        		<li><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a>		</li>
+	      		</ul>
+	   		 </div>
+	  	</div>
+	</nav>
 
-<!-- main page button takes you back to the main page -->
-<button id="mainPage">main page</button>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3"></div>
+				<div class="col-md-6">
+					<h1><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp; Favorite Words</h1>
+
+
+				<div class="col-md-3"></div>
+
+		</div>
+	</div>
 
 
 <script src="https://code.jquery.com/jquery.js"></script>
@@ -33,6 +70,11 @@
 
 <!-- add javascript to individual page -->
 <script type="text/javascript">
+
+var favWord = [];
+
+ 	for (var i = 0; i < favWord.length; i++) {
+ 	}
 
 
 </script>
