--- a/favorite.html
+++ b/favorite.html
@@ -18,6 +18,9 @@
 
 	<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 
+	<!-- LINK TO FIREBASE GOES HERE -->
+  	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+
 	<style>
 		.glyphstyle{
 			font-size: 20px;
@@ -35,8 +38,8 @@
 				<a class="navbar-brand" href="#">Word App</a>
 			</div>	
 			<ul class="nav navbar-nav navbar-right">
-				<li class="active"><a href="main_2.html">Search</a></li>
-				<li><a href="favorite.html">Favorites</a></li>
+				<li><a href="main_2.html">Search</a></li>
+				<li class="active"><a href="favorite.html">Favorites</a></li>
 				<li><a href="challenge.html">Challenge</a></li>
 				<!-- when selected user would be logged out of their profile and be brought to the log in screen -->
 				<li><a href="login">Log Out</a></li>
@@ -45,6 +48,43 @@
 	</nav>
 
 
+	<div class="container">
+
+		<div class="row">
+			<div class="col-md-3"></div>
+			<div class="col-md-6">
+				<h2 style="text-align: center">Favorite Words</h2>
+
+			</div>
+			<div class="col-md-3"></div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-3"></div>
+
+			<div class="col-md-6">
+
+
+				<div id="word-dumpster">
+
+					<!-- here the word and its type will be properly formatted
+					and displayed -->
+					<div id="words">
+						<ul id="list">
+						</ul>
+					</div>
+
+					<div id="word-definition">
+					</div>
+				</div>
+
+			<div class="col-md-3"></div>
+
+			</div>
+		</div>
+
+
+	</div>
 
 
 
@@ -52,7 +92,8 @@
 
 
 
-	<script type="text/javascript">
+
+	<script type="text/javascript" src="assets/javascript/favorite-logic.js">
 
 
 
