--- a/main_2.html
+++ b/main_2.html
@@ -39,9 +39,9 @@
 				<a class="navbar-brand" href="#">Word App</a>
 			</div>	
 			<ul class="nav navbar-nav navbar-right">
-				<li class="active"><a href="#">Search</a></li>
-				<li><a href="favorite.html">Favorites</a></li>
-				<li><a href="challenge.html">Challenge</a></li>
+				<li class="active"><a href="main_2.html">Search</a></li>
+				<li><a href="favorite.html" href="favorite.html">Favorites</a></li>
+				<li><a href="challenge.html" href="challenge.html">Challenge</a></li>
 				<!-- when selected user would be logged out of their profile and be brought to the log in screen -->
 				<li><a href="login">Log Out</a></li>
 			</ul>
