--- a/logIn.html
+++ b/logIn.html
@@ -36,7 +36,7 @@
 			<div class="row">
 				<div class="col-md-offset-1 bgstyle">
 						<!-- when selected the system will check to make sure the username and password match what is in the system. -->
-						<button class="btn btn-primary" id="btnLogin" type="submit" class="link-style">Login</a></button>
+						<button class="btn btn-primary" id="btnLogin" type="submit" class="link-style">Login</button>
 						<!-- if the user does not have an account with the word up app then they can create a profile -->
 						<button class="btn btn-primary" id="btnSignUp" type="submit">Sign Up</button>
 						<!-- logout button remains hidden -->
