--- a/challenge.html
+++ b/challenge.html
@@ -18,8 +18,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+	<script src="https://use.fontawesome.com/559c51d706.js"></script>
 	
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
@@ -50,8 +54,8 @@
 
 	    	<div class="collapse navbar-collapse navbar-right" id="myNavbar">
 	      		<ul class="nav navbar-nav">
-	       			<li><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;Search</a></li>
-	        		<li><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp;  Favorites</a></li>
+	       			<li><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp; Search</a></li>
+	        		<li><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp; Favorites</a></li>
 	        		<li class="active"><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a>		</li>
 	      		</ul>
 	   		 </div>
