--- a/favorite.html
+++ b/favorite.html
@@ -34,16 +34,12 @@
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
+    <script src="https://use.fontawesome.com/559c51d706.js"></script>
+
     <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 
     <!-- LINK TO FIREBASE GOES HERE -->
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-
-    <style>
-        .glyphstyle {
-            font-size: 20px;
-        }
-    </style>
 
 </head>
 
@@ -62,8 +58,8 @@
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;Search</a></li>
-                    <li class="active"><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp;  Favorites</a></li>
+                    <li><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp; Search</a></li>
+                    <li class="active"><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp; Favorites</a></li>
                     <li><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a> </li>
                 </ul>
             </div>
