--- a/challenge.html
+++ b/challenge.html
@@ -50,7 +50,7 @@
 	      		<ul class="nav navbar-nav">
 	       			<li><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp; Search</a></li>
 	        		<li><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp; Favorites</a></li>
-	        		<li class="active"><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a>		</li>
+	        		<li class="active"><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a></li>
 	      		</ul>
 	   		 </div>
 
@@ -64,7 +64,7 @@
 			<div class="col-md-5"></div>
 				<div class="col-md-4">
 					<h1><i class="fa fa-trophy .glyphstyle2" aria-hidden="true"></i>&nbsp; Word Challenge</h1>
-					<h5 class="text-center" style="text-decoration: underline">Try using this word at least once today!</h5>
+					<h5 style="text-decoration: underline">Try using this word at least once today!</h5>
 
 					
 					<div id="challengeWord"></div>
@@ -74,6 +74,12 @@
 						<input placeholder="Type your sentence here" type="text" id="sentence">
 						<button id="submit-challenge">Submit</button>
 					</form>
+					</br>
+					</br>
+
+					<p>Daily Challenge is <span id="status" class="color"><b id="color">incomplete</b></span></p>
+
+					<div id="images">
 
 
 
