challenge page is finally working. other changes made. should be final version

--- a/favorite.html
+++ b/favorite.html
@@ -45,25 +45,35 @@
 
 <body>
 
-
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-inverse nav-style navbar-fixed-top">
+
         <div class="container-fluid">
+
             <div class="navbar-header">
+
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-	       		<span class="icon-bar"></span>
-	       		<span class="icon-bar"></span>
-	       		<span class="icon-bar"></span>                        
-	      		</button>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>                        
+                </button>
+
                 <a class="navbar-brand" href="main_2.html">Word Up</a>
+
             </div>
+
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+
                 <ul class="nav navbar-nav">
-                    <li><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp; Search</a></li>
-                    <li class="active"><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp; Favorites</a></li>
+                    <li><a href="main_2.html"><i class="fa fa-search" aria-hidden="true"></i>&nbsp; Search</a></li>
+                    <li class="active"><a href="favorite.html"><i class="fa fa-star" aria-hidden="true"></i>&nbsp; Favorites</a></li>
                     <li><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a></li>
                 </ul>
+
             </div>
+
         </div>
+
     </nav>
 
 
@@ -71,37 +81,32 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-md-5"></div>
-            <div class="col-md-4">
-                <h1><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp; Favorite Words</h1>
 
-            </div>
-            <div class="col-md-3"></div>
-        </div>
+            <div class="center-block">
 
-        <div class="row">
-            <div class="col-md-5"></div>
+                <h1><i class="fa fa-star" aria-hidden="true"></i>&nbsp; Favorite Words</h1>
+                </br>
 
-            <div class="col-md-4">
 
                 <div id="word-dumpster">
 
                     <!-- here the word and its type will be properly formatted
-					and displayed -->
+                    and displayed -->
                     <div id="words">
                         <ul id="list">
                         </ul>
                     </div>
 
-                    <div id="word-definition">
-                    </div>
+                    <div id="word-definition"></div>
+
                 </div>
 
-                <div class="col-md-3"></div>
 
             </div>
+
         </div>
 
+    </div>
 
     </div>
 
