--- a/main_2.html
+++ b/main_2.html
@@ -29,81 +29,94 @@
 
     <script src="https://use.fontawesome.com/559c51d706.js"></script>
 
+    <!-- alertify.js -->
+    <script src="https://cdn.rawgit.com/alertifyjs/alertify.js/v1.0.10/dist/js/alertify.js"></script>
+
     <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 
 </head>
 
 <body>
+
     <!-- Navigation Bar -->
 
     <nav class="navbar navbar-inverse nav-style navbar-fixed-top">
+
         <div class="container-fluid">
+
             <div class="navbar-header">
+
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>                        
-				</button>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>                        
+                </button>
+
                 <a class="navbar-brand" href="main_2.html">Word Up</a>
+
             </div>
+
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp; Search</a></li>
-                    <li><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp; Favorites</a></li>
+                    <li class="active"><a href="main_2.html"><i class="fa fa-search" aria-hidden="true"></i>&nbsp; Search</a></li>
+                    <li><a href="favorite.html"><i class="fa fa-star" aria-hidden="true"></i>&nbsp; Favorites</a></li>
                     <li><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a></li>
                 </ul>
+
             </div>
+
         </div>
+
     </nav>
 
     <div class="container">
 
         <div class="row">
 
-            <div class="col-md-5"></div>
+            <div class="center-block">
 
-            <div class="col-md-4">
                 <form>
                     <!-- user would enter in word they want to find the definition of -->
                     <input type="text" id="input" placeholder=" enter a word">
                     <!-- when selected button will display definition of word located in input section -->
-                    <button class="button-style" id="search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                    <button class="button-style" id="search"><i class="fa fa-search" aria-hidden="true"></i></button>
 
                     <!-- when selected it will take user to a new page that displays list of favorite words -->
-                    <button class="button-style-fav" id="add-to-favorites"><span class="glyphicon glyphicon-star" aria-hidden="true"></button>
+                    <button class="button-style-fav" id="add-to-favorites"><i class="fa fa-star" aria-hidden="true"></i></button>
                 </form>
-            </div>
 
-            <div class="col-md-3"></div>
 
-        </div>
-
-        <div class="row">
-
-            <div class="col-md-5"></div>
-
-            <div class="col-md-4">
-
+   
                 <div id="word-dumpster">
                     <!-- here the word and its type will be properly formatted
-					and displayed -->
+                    and displayed -->
                     <div id="word-info">
                     </br>
                     </br>
                     <h2 class="dict-type"><i>Type a word to look up the definition in the Oxford Dictionary</i></h2>
                     </div>
 
-                    <div id="word-definition">
-                    </div>
+                    <div id="word-definition"></div>
+
                 </div>
 
-                <div class="col-md-3"></div>
-
             </div>
+
         </div>
 
-
     </div>
+
+
+<!--     <div class="navbar navbar-default navbar-fixed-bottom">
+
+        <div class="container">
+
+            <p class="navbar-text">&copy; 2017 - Team Gosling</p>
+      
+        </div>
+    
+    </div> -->
 
     <script type="text/javascript" src="assets/javascript/main-logic.js"></script>
 
