--- a/challenge.html
+++ b/challenge.html
@@ -51,14 +51,14 @@
 		       		<span class="icon-bar"></span>     
 	      		</button>
 
-	      		<a class="navbar-brand" href="main_2.html">Word Up</a>
+	      		<a class="navbar-brand" href="index.html">Word Up</a>
 
 	    	</div>
 
 	    	<div class="collapse navbar-collapse navbar-right" id="myNavbar">
 
 	      		<ul class="nav navbar-nav">
-	       			<li><a href="main_2.html"><i class="fa fa-search" aria-hidden="true"></i>&nbsp; Search</a></li>
+	       			<li><a href="index.html"><i class="fa fa-search" aria-hidden="true"></i>&nbsp; Search</a></li>
 	        		<li><a href="favorite.html"><i class="fa fa-star" aria-hidden="true"></i>&nbsp; Favorites</a></li>
 	        		<li class="active"><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a></li>
 	      		</ul>
